--- a/assets/scss/addons/_croco-school-lesson-list.scss
+++ b/assets/scss/addons/_croco-school-lesson-list.scss
@@ -46,11 +46,12 @@
 		font-size: 18px;
 		line-height: 22px;
 		color: #617BE5;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 		font-weight: normal;
 
 		span {
 			margin-right: 5px;
+			font-weight: normal;
 		}
 	}
 
