--- a/assets/scss/addons/_croco-school-course.scss
+++ b/assets/scss/addons/_croco-school-course.scss
@@ -45,8 +45,68 @@
 	&__desc {
 		font-size: 18px;
 		line-height: 30px;
-		margin: 0 0 30px 0;
+		margin: 0 0 20px 0;
 		text-align: center;
+	}
+
+	&__progress {
+		display: flex;
+		justify-content: center;
+		min-width: 540px;
+		max-width: 100%;
+		color: #a2aab3;
+		font-size: 14px;
+		margin: 0 0 20px 0;
+
+		&.in_progress-status {
+			.croco-school-course__progress-status {
+				flex: 1 1 auto;
+			}
+		}
+	}
+
+	&__progress-label {
+		color: #152c40;
+		margin-right: 10px;
+		font-weight: normal;
+	}
+
+	&__progress-status {
+		flex: 0 1 auto;
+		display: flex;
+		flex-flow: row nowrap;
+
+		.complete-message {
+			color: #34D7A1;
+			font-weight: normal;
+		}
+
+		.progress-bar {
+			width: 100%;
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+
+			.bar {
+				width: 100%;
+				height: 8px;
+				background-color: #F4F5F7;
+				border-radius: 4px;
+				flex: 1 1 auto;
+
+
+				span {
+					display: block;
+					height: 100%;
+					background-color: #617BE5;
+					border-radius: 4px;
+				}
+			}
+
+			.progress-count {
+				margin-left: 10px;
+			}
+		}
 	}
 
 	&__progress-link {
@@ -59,9 +119,12 @@
 			color: white;
 			font-size: 13px;
 			border-radius: 3px;
-
 			text-transform: uppercase;
 			font-weight: normal;
+		}
+
+		&:hover {
+			background-color: #2fc594;
 		}
 	}
 }
