--- a/assets/scss/addons/_croco-school-articles.scss
+++ b/assets/scss/addons/_croco-school-articles.scss
@@ -1,4 +1,4 @@
-.croco-school-guide {
+.croco-school-articles {
 
 	&__inner {
 		display: flex;
@@ -84,7 +84,7 @@
 		width: 33.3333%;
 		padding: 0 20px;
 
-		.croco-school-guide__article-list {
+		.croco-school-articles__article-list {
 		}
 	}
 
