--- a/assets/scss/addons/_croco-school-course-list.scss
+++ b/assets/scss/addons/_croco-school-course-list.scss
@@ -61,7 +61,8 @@
 	}
 
 	&__item-name {
-		margin: 0 0 20px 0;
+		font-size: 24px;
+		margin: 0 0 12px 0;
 	}
 
 	&__item-desc {
@@ -84,7 +85,6 @@
 
 	&__progress-status {
 		flex: 1 1 auto;
-
 		display: flex;
 		flex-flow: row nowrap;
 
@@ -131,6 +131,7 @@
 		span {
 			color: white;
 			font-size: 13px;
+			font-weight: normal;
 			border-radius: 3px;
 
 			text-transform: uppercase;
@@ -147,11 +148,12 @@
 		top: 10px;
 		right: 10px;
 		background-color: #617BE5;
-		padding: 5px 10px;
-		border-radius: 10px;
+		padding: 6px 12px;
+		border-radius: 20px;
 		color: white;
 		font-size: 14px;
 		line-height: 20px;
+		font-weight: normal;
 		z-index: 1;
 
 		span {
