--- a/assets/scss/addons/_croco-school-related-articles.scss
+++ b/assets/scss/addons/_croco-school-related-articles.scss
@@ -38,5 +38,14 @@
 		line-height: 16px;
 		font-weight: 400;
 		color: #617BE5;
+		position: relative;
+
+		i {
+			position: absolute;
+			top: -10px;
+			right: -22px;
+			font-size: 22px;
+			color: #34d7a1;
+		}
 	}
 }
