--- a/assets/scss/addons/_croco-school-lesson-list.scss
+++ b/assets/scss/addons/_croco-school-lesson-list.scss
@@ -32,13 +32,15 @@
 
 		position: relative;
 		margin: 20px;
-		padding: 30px;
+		padding: 26px 30px 30px 30px;
 		background-color: white;
 		box-shadow: 2px 2px 5px rgba(22, 43, 64, 0.05);
 		transition: all 0.4s ease;
 
 		&:hover {
-			box-shadow: 5px 5px 20px rgba(22, 43, 64, 0.12);
+			box-shadow: 0px 20px 20px rgba(22, 43, 64, 0.12);
+			transform: translateY(-6px);
+			transition: all 0.4s ease;
 		}
 	}
 
@@ -46,26 +48,27 @@
 		font-size: 18px;
 		line-height: 22px;
 		color: #617BE5;
-		margin-bottom: 10px;
-		font-weight: normal;
+		margin-bottom: 8px;
+		font-weight: 900;
 
 		span {
 			margin-right: 5px;
-			font-weight: normal;
+			font-weight: 900;
 		}
 	}
 
 	&__title {
 		font-size: 24px;
-		line-height: 30px;
+		line-height: 34px;
 		margin: 0 0 10px 0;
 	}
 
 	&__excerpt {
 		flex: 1 1 auto;
 		font-size: 16px;
-		line-height: 24px;
+		line-height: 26px;
 		margin: 0 0 25px 0;
+		color: #5C6B79;
 	}
 
 	&__permalink {
@@ -74,7 +77,7 @@
 		justify-content: center;
 		align-items: center;
 
-		padding: 10px 20px;
+		padding: 10px 16px;
 		background-color: #34D7A1;
 		border-radius: 3px;
 		text-align: center;
@@ -108,9 +111,10 @@
 		span {
 			color: white;
 			font-size: 13px;
+			font-weight: 600;
+			letter-spacing: 1.4px;
 			border-radius: 3px;
 			text-transform: uppercase;
-			font-weight: normal;
 		}
 
 		&:hover {
