--- a/assets/scss/addons/_croco-school-course-list.scss
+++ b/assets/scss/addons/_croco-school-course-list.scss
@@ -27,7 +27,6 @@
 		flex-flow: column;
 		justify-content: flex-start;
 		align-items: stretch;
-
 		position: relative;
 		margin: 20px;
 		background-color: white;
@@ -35,7 +34,9 @@
 		transition: all 0.4s ease;
 
 		&:hover {
-			box-shadow: 5px 5px 20px rgba(22, 43, 64, 0.12);
+			box-shadow: 0px 20px 20px rgba(22, 43, 64, 0.12);
+			transform: translateY(-6px);
+			transition: all 0.4s ease;
 		}
 	}
 
@@ -57,17 +58,18 @@
 		flex-flow: column;
 		justify-content: flex-start;
 		align-items: stretch;
-		padding: 30px;
+		padding: 27px 30px 30px 30px;
 	}
 
 	&__item-name {
 		font-size: 24px;
-		margin: 0 0 12px 0;
+		margin: 0 0 15px 0;
 	}
 
 	&__item-desc {
 		margin: 0 0 15px 0;
 		flex: 1 1 auto;
+		font-size: 16px;
 	}
 
 	&__progress {
@@ -79,20 +81,20 @@
 
 	&__progress-label {
 		color: #152c40;
-		margin-right: 10px;
-		font-weight: normal;
+		margin-right: 5px;
+		font-weight: 500;
+		font-size: 14px;
 	}
 
 	&__progress-status {
 		flex: 1 1 auto;
 		display: flex;
 		flex-flow: row nowrap;
-
+		font-weight: 500;
 		.complete-message {
 			color: #34D7A1;
-			font-weight: normal;
+			font-weight: 500;
 		}
-
 		.progress-bar {
 			width: 100%;
 			display: flex;
@@ -127,19 +129,19 @@
 		border-radius: 3px;
 		text-align: center;
 		transition: all 0.3s ease;
+		line-height: 18px;
 
 		span {
 			color: white;
-			font-size: 13px;
-			font-weight: normal;
+			font-size: 14px;
+			letter-spacing: 0.8px;
 			border-radius: 3px;
-
+			font-weight: 600;
 			text-transform: uppercase;
-			font-weight: normal;
 		}
 
 		&:hover {
-			background-color: #2fc594;
+			background-color: #617BE5;
 		}
 	}
 
