--- a/assets/scss/addons/_croco-school-articles.scss
+++ b/assets/scss/addons/_croco-school-articles.scss
@@ -26,7 +26,11 @@
 		position: relative;
 		margin-bottom: 30px;
 	}
-
+	@media ( max-width: 425px ) {
+		&__name-container {
+			margin-bottom: 0;
+		}
+	}
 	&__name {
 		text-align: center;
 		font-size: 40px;
@@ -35,7 +39,11 @@
 		margin: 0;
 		letter-spacing: -1px;
 	}
-
+	@media ( max-width: 425px ) {
+		&__name {
+			font-size: 30px;
+		}
+	}
 	&__back {
 		position: absolute;
 		font-size: 16px;
@@ -81,10 +89,21 @@
 		margin-left: -20px;
 		margin-right: -20px;
 	}
-
+	@media ( max-width: 425px ) {
+		&__terms-list{
+		justify-content: center;
+	}
+	}
 	&__terms-item {
 		width: 33.3333%;
 		padding: 0 20px;
+	}
+	@media ( max-width: 425px ) {
+		&__terms-item {
+		width: 100%;
+		padding: 10px;
+			max-width: 280px;
+		}
 	}
 
 	&__article-list {
