--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -4,10 +4,23 @@
 @import "addons/croco-school-course";
 @import "addons/croco-school-course-progress";
 @import "addons/croco-school-lesson-list";
+
 .site-content  .croco-school h1 {
 	font-weight: 900;
 	font-size: 40px;
 	line-height: 1.175;
+}
+@media ( max-width: 768px ) {
+	.site-content  .croco-school h1 {
+		font-size: 36px;
+	}
+}@media ( max-width: 425px ) {
+	.site-content  .croco-school h1 {
+		font-size: 30px;
+	}
+}
+.croco-school__single-article {
+	margin-top: 60px;
 }
 .croco-school {
 	.guide-article {
@@ -37,10 +50,13 @@
 		display: flex;
 		flex-flow: row nowrap;
 	}
+	@media ( max-width: 425px ) {
+		&__single-article {
+			flex-flow: column nowrap;
+		}
+	}
 
 	h1.croco-school__single-article-title {
-		font-size: 40px;
-		font-weight: 900;
 		margin: 0 0 30px 0;
 	}
 
@@ -59,24 +75,58 @@
 			padding-left: 0;
 			margin-left: 0;
 			border-left: none;
-			padding-right: 56px;
-			margin-right: 60px;
+			padding-right: 57px;
+			margin-right: 30px;
 			border-right: 1px solid #E4E7ED;
+		}
+		@media ( max-width: 768px ) {
+			.guide-article.has-sidebar & .croco-school__single-article-container-inner {
+				padding-right: 20px;
+				margin-right: 10px;
+			}
+		}
+		@media ( max-width: 768px ) {
+			.guide-article.has-sidebar & .croco-school__single-article-container-inner {
+				padding: 10px;
+				margin-right: 0;
+				border: none;
+			}
 		}
 		.course-article.has-sidebar & .croco-school__single-article-container-inner {
 			margin-right: 40px;
+		}
+		@media ( max-width: 425px ) {
+			.course-article.has-sidebar & .croco-school__single-article-container-inner {
+				margin-right: 0;
+			}
+		}
+	}
+	@media ( max-width: 425px ) {
+		&__single-article-container {
+			width: 100%;
 		}
 	}
 
 	&__single-article-sidebar {
 		width: 25%;
-		min-width: 280px;
+		min-width: 200px;
+	}
+	@media ( max-width: 425px ) {
+		&__single-article-sidebar {
+			width: 100%;
+			min-width: 280px;
+		}
 	}
 
 	&__single-search {
 		padding: 50px 0;
 		background-color: #F4F5F7;
 		margin-bottom: 71px;
+	}
+	@media ( max-width: 425px ) {
+		&__single-search {
+			margin-bottom: 10px;
+		}
 	}
 
 	&__lesson-progress {
@@ -88,7 +138,7 @@
 		padding: 40px 0 40px 0;
 		border-top: 1px solid #E4E7ED;
 		border-bottom: 1px solid #E4E7ED;
-
+		
 		&.status-in_progress {
 
 		}
@@ -133,7 +183,6 @@
 				font-size: 20px;
 				margin-right: 10px;
 			}
-
 			span {
 				color: white;
 				font-size: 14px;
@@ -141,6 +190,11 @@
 				border-radius: 3px;
 				letter-spacing: 1.4px;
 				text-transform: uppercase;
+			}
+			@media ( max-width: 425px ) {
+				span {
+					font-size: 9px;
+				}
 			}
 
 			&:hover {
@@ -155,8 +209,20 @@
 				}
 			}
 		}
+		@media ( max-width: 425px ) {
+			a {
+				padding: 14px 10px 12px 10px;
+				margin-top: 20px;
+				width: 100%;
+			}
+		}
 	}
-
+	@media ( max-width: 425px ) {
+		&__lesson-progress {
+			margin: 40px 0 0 0;
+			flex-direction: column;
+		}
+	}
 }
 
 .cherry-search-wrapper {
@@ -293,9 +359,18 @@
 			font-weight: 500;
 			line-height: 1.467em;
 		}
+		@media ( max-width: 768px ) {
+			.croco-school-related-articles__link {
+				font-size: 12px;
+			}
+		}
 		.education_hat {
-			font-size: 16px;
-			margin-left: 5px;
+			padding: 0 10px;
+		}
+		@media ( max-width: 768px ) {
+			.education_hat {
+				padding: 0 5px 0 5px;
+			}
 		}
 	}
 }
@@ -312,14 +387,45 @@
 .croco-school__single-article-sidebar.is-affixed .inner-wrapper-sticky {
 	margin-top: 40px;
 }
+@media ( max-width: 425px ) {
+	.croco-school__single-article-sidebar.is-affixed .inner-wrapper-sticky {
+		margin-top: 0;
+	}
+}
+@media ( max-width: 425px ) {
+	.croco-school__single-article-sidebar.is-affixed .inner-wrapper-sticky {
+		position: relative!important;
+		width: 100% !important;
+		padding: 0;
+		top: 0!important;
+		left: 0!important;
+		transform: none!important;
+	}
+	.croco-school__single-article-sidebar .inner-wrapper-sticky{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	}
+}
+@media ( max-width: 425px ) {
+	#secondary.croco-school__single-article-sidebar.is-affixed {
+		height: 100% !important;
+	}
+}
+@media ( max-width: 425px ) {
+	#secondary {
+		margin-top: 10px;
+	}
+}
+
+
 
 .croco-school__single-article-container-inner {
 	h1, h2, h3, h4 {
-		margin: 31px 0;
+		margin: 30px 0;
 		hyphens: none;
 	}
 	h5, h6 {
-		margin: 31px 0 0;
+		margin: 30px 0 0;
 		hyphens: none;
 	}
 	
@@ -345,16 +451,79 @@
 	li > ol {
 		margin-left: 0;
 	}
-	p + p {
-		margin-top: 32px;
+	p {
+		margin-bottom: 30px;
 	}
 	b {
 		color: #162b40;
 	}
+	strong {
+			color: #162b40;
+	}
 	a {
 		color: #617BE5;
 	}
-
+}
+table {
+	margin: 30px 0;
+}
+table tr td, table tr th,
+table td, table th {
+	padding: 5px 10px;
+	font-size: 16px;
+}
+@media screen and (max-width: 640px) {
+	table {
+		display: block;
+		overflow-x: auto;
+	}
+}
+@media ( max-width: 425px ) {
+	.croco-school__single-article-container-inner {
+		h1, h2, h3, h4 {
+			margin: 15px 0;
+		}
+		h3 {
+			font-size: 20px;
+		}
+		h5 {
+			font-size: 16px;
+		}
+		p {
+			font-size: 16px;
+		}
+		li {
+			font-size: 16px;
+		}
+		table td, table th {
+			font-size: 14px;
+		}
+		h5, h6 {
+			margin: 15px 0 0;
+		}
+		ul {
+			margin: 1em 0 1em 1.8em;
+			padding-left:0;
+			padding-right:0;
+		}
+		p + p {
+			margin-top: 15px;
+		}
+		ol {
+			margin: 1em 0 1em 1em;
+			padding-left:0;
+			padding-right:0;
+		}
+		ul > ul {
+			margin: 0 0 0 0.7em;
+		}
+		
+		li > ul
+		{
+			margin-bottom: 0;
+			margin-left: 0.6em;
+		}
+	}
 }
 .croco-school__single-article-container-inner .croco-school__single-article-content {
 	a:hover {
