fix style banner

--- a/assets/scss/addons/_croco-school-course-progress.scss
+++ b/assets/scss/addons/_croco-school-course-progress.scss
@@ -11,6 +11,7 @@
 			.croco-school-course-progress__item-icon {
 				color: #617BE5;
 				border-color: #617BE5;
+				background-color: #ffffff;
 			}
 		}
 	}
