--- a/assets/scss/addons/_croco-school-articles.scss
+++ b/assets/scss/addons/_croco-school-articles.scss
@@ -45,6 +45,8 @@
 		}
 	}
 	&__back {
+		display: flex;
+		align-items: center;
 		position: absolute;
 		font-size: 16px;
 		font-weight: 400;
@@ -85,7 +87,7 @@
 		flex-flow: row wrap;
 		justify-content: flex-start;
 		align-items: flex-start;
-		margin-top: 40px;
+		margin-top: 0;
 		margin-left: -20px;
 		margin-right: -20px;
 	}
