--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -86,7 +86,7 @@
 	}
 
 	h1.croco-school__single-article-title {
-		margin: 0 0 30px 0;
+		margin:0 auto 30px auto ;
 	}
 
 	&__single-article-content {
@@ -100,7 +100,8 @@
 
 	&__single-article-media {
 		width: 100%;
-		padding-bottom: 55px;
+		padding-bottom: 60px;
+		padding-top: 60px;
 
 		.croco-school__single-article-media-inner {
 			position: relative;
@@ -815,13 +816,14 @@ $transparentDarker: rgba(0, 8, 16, 0.24);
 	border-bottom: 8px solid transparent;
   }
 }
-
+.guide-article .croco-school__single-article-content {
+	margin: 0 auto;
+}
 .guide-article .croco-school__single-article-title,
 .guide-article .croco-school__single-article-content {
 	max-width: 800px;
 	padding-left: 20px;
 	padding-right: 20px;
-	margin: 0 auto!important;
 	
 	img.aligncenter {
 		margin: 0 auto;
@@ -947,4 +949,10 @@ $transparentDarker: rgba(0, 8, 16, 0.24);
 			font-size: 16px;
 		}
 	}
+}
+.search-no-results #primary {
+	margin: 0 auto;
+}
+.search.search-results .site-content  {
+	margin-top: 60px;
 }
