Added: Croro Article Categories Widget

--- a/assets/scss/croco-school-frontend.scss
+++ b/assets/scss/croco-school-frontend.scss
@@ -4,6 +4,7 @@
 @import "addons/croco-school-course";
 @import "addons/croco-school-course-progress";
 @import "addons/croco-school-lesson-list";
+@import "addons/croco-school-article-categories";
 
 .site-content  .croco-school h1 {
 	font-weight: 900;
