--- a/assets/scss/addons/_croco-school-article-categories.scss
+++ b/assets/scss/addons/_croco-school-article-categories.scss
@@ -45,7 +45,6 @@
 
 	&__child-link {
 		position: relative;
-		display: inline-block;
 		color: #617BE5;
 
 		&:before {
@@ -58,6 +57,7 @@
 		}
 
 		.croco-school-cats--single & {
+			display: inline-block;
 			padding-left: 15px;
 
 			&:hover {
@@ -66,6 +66,7 @@
 		}
 
 		.croco-school-cats--archive & {
+			display: block;
 			padding-left: 35px;
 			padding-right: 20px;
 
