--- a/assets/scss/addons/_croco-school-articles-archive.scss
+++ b/assets/scss/addons/_croco-school-articles-archive.scss
@@ -7,6 +7,10 @@
 		line-height: 47px;
 		letter-spacing: -1px;
 		color: #162B40;
+		@media (max-width: 425px) {
+			font-size: 30px;
+			line-height: 40px;
+		}
 	}
 
 	&__list {
@@ -25,11 +29,13 @@
 		display: flex;
 		align-items: center;
 		padding: 11px 20px;
-
 		font-weight: 500;
 		font-size: 18px;
 		line-height: 27px;
-
+		@media (max-width: 425px) {
+			padding: 10px 10px;
+			font-size: 16px;
+		}
 		color: #5C6B79;
 		background-color: #fff;
 		box-shadow: 0 2px 4px rgba(22, 43, 64, 0.1);
@@ -52,6 +58,9 @@
 			flex-shrink: 0;
 			margin-left: auto;
 			padding-left: 15px;
+			@media (max-width: 425px) {
+				display: none;
+			}
 
 			&__text {
 				font-weight: 700;
@@ -105,6 +114,9 @@
 .custom-width-section.elementor-widget-croco-school-categories {
 	.croco-school-cats {
 		width: 75%;
+		@media (max-width: 425px) {
+			width: 100%;
+		}
 	}
 }
 .home-widgets.elementor-widget-croco-school-categories {
